# cyclic

./: .gitignore  CYCLIC_PROOF_REF.md  EXTRACTION_PROOF_STATUS.md  Makefile  README.md  READOFF_EXTRACT_DOUBLED_FUEL_FINAL_REPORT.md  READOFF_EXTRACT_DOUBLED_FUEL_STATUS.md  TODO.md  _CoqProject  cyclic_coc_sketch.md  cyclic_normalisation_todo.md  cyclic_proof_iso.md  dune-project  productive_infinite_behaviour.md  progress_measure_automation_plan.md
papers/cyclic-cic/: macros.tex  main.tex  refs.bib
papers/cyclic-cic/sections/: canonical-forms.tex  conclusion.tex  cyclic-calculus.tex  global-conditions.tex  intro.tex  related-work.tex  source-calculus.tex  theorems.tex  transformations.tex  why-cyclic.tex
theories/: _CoqProject  dune
theories/CyclicProof/: CyclicProof.v  Ranked.v
theories/Equiv/: Bisimulation.v  CIU.v  CIUJudgement.v
theories/Graph/: FiniteDigraph.v
theories/Judgement/: Typing.v
theories/Preproof/: Preproof.v
theories/Progress/: Embedding.v  Measures.v  PatternUnification.v  Ranking.v
theories/Semantics/: Cbn.v
theories/Syntax/: Examples.v  StrictPos.v  Term.v
theories/Transform/: BetaReduce.v  CaseCase.v  CaseCaseProof.v  CyclicRules.v  CyclicVertexSpec.v  Extract.v  ReadOff.v  ReadOffCompileInvariants.v  ReadOffExtractCorrectness.v  ReadOffExtractCorrectness.v.backup  ReadOffPreproof.v  ReadOffSpec.v  Supercompile.v
