(coq.theory
 (name Cyclic)
 (theories stdpp Stdlib Autosubst)
  (flags (:standard -w -notation-overridden))
  (modules
   Syntax.StrictPos
   Syntax.Term
   Judgement.Typing
   Semantics.Cbn

   Graph.FiniteDigraph
   Preproof.Preproof
   CyclicProof.CyclicProof
   CyclicProof.Ranked
 
   Progress.Ranking
   Progress.Measures
   Progress.Embedding
   Progress.PatternUnification
   Transform.ReadOffSpec
   Transform.ReadOff
   Transform.CyclicVertexSpec
   Transform.ReadOffPreproof
   Transform.Extract
   Equiv.Bisimulation))


